--- a/core-api/build.gradle
+++ b/core-api/build.gradle
@@ -38,7 +38,7 @@ dependencies {
   implementation group: 'org.bouncycastle',              name: 'bcpkix-jdk15on',                 version: bouncycastleVersion
 
   implementation group: 'com.fasterxml.jackson.jaxrs',   name: 'jackson-jaxrs-json-provider',    version: jacksonVersion
-  implementation (group: 'com.fasterxml.jackson.core',   name: 'jackson-databind',               version: jacksonVersion) {
+  implementation (group: 'com.fasterxml.jackson.core',   name: 'jackson-databind',               version: jacksonDatabindVersion) {
     force = true
   }
   implementation group: 'org.hibernate',                 name: 'hibernate-validator',            version: hibernateValidatorVersion
