--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -163,7 +163,7 @@ dependencies {
 
   testImplementation group: 'com.hubspot.jinjava',         name: 'jinjava',                        version: jinjavaVersion
   testImplementation group: 'net.sf.json-lib',             name: 'json-lib',                       version: '2.4',              classifier: 'jdk15'
-  testImplementation group: 'com.fasterxml.jackson.core',  name: 'jackson-databind',               version: jacksonVersion
+  testImplementation group: 'com.fasterxml.jackson.core',  name: 'jackson-databind',               version: jacksonDatabindVersion
 
   testRuntimeClasspath group: 'org.testcontainers',        name: 'postgresql',                     version: testContainersVersion
   testRuntimeClasspath group: 'org.awaitility',            name: 'awaitility',                     version: awaitilityVersion
