--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -182,7 +182,7 @@ dependencies {
     }
     because 'because there is no jar for 2.4.3 in maven central repo...'
   }
-  implementation group: 'com.fasterxml.jackson.core',    name: 'jackson-databind',               version: jacksonVersion
+  implementation group: 'com.fasterxml.jackson.core',    name: 'jackson-databind',               version: jacksonDatabindVersion
 
   runtimeOnly group: 'javax.xml.bind',                name: 'jaxb-api', version: '2.3.0'
 }
