--- a/gradle.properties
+++ b/gradle.properties
@@ -60,6 +60,7 @@ slf4jApiVersion=1.7.30
 accessorSmartVersion=2.4.7
 gsonVersion=2.8.9
 jacksonVersion=2.13.4
+jacksonDatabindVersion=2.13.4.2
 jsonSmartVersion=2.4.5
 snakeYamlVersion=1.33
 xerces=2.12.0
