--- a/node-status-monitor-client/build.gradle
+++ b/node-status-monitor-client/build.gradle
@@ -23,7 +23,7 @@ dependencies {
   implementation     group: 'com.google.protobuf',              name: 'protobuf-java-util',          version: protobufVersion
   implementation     group: 'com.google.code.gson',             name: 'gson',                        version: gsonVersion
   implementation     group: 'com.github.briandilley.jsonrpc4j', name: 'jsonrpc4j',                   version: '1.6'
-  implementation     group: 'com.fasterxml.jackson.core',       name: 'jackson-databind',            version: jacksonVersion
+  implementation     group: 'com.fasterxml.jackson.core',       name: 'jackson-databind',            version: jacksonDatabindVersion
   implementation     group: 'org.slf4j',                        name: 'slf4j-api',                   version: slf4jApiVersion
   implementation     group: 'org.apache.commons',               name: 'commons-lang3',               version: apacheCommonsLangVersion
   implementation     group: 'org.bouncycastle',                 name: 'bcprov-jdk15on',              version: bouncycastleVersion
