CB-19061 New entitlement to skip DH stop check in case of Runtime/OS upgrade

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -108,7 +108,7 @@ auth:
     postgres.upgrade.skip.attached.datahubs.check.enable: false
     postgres.upgrade.skip.service.stop.enable: false
     environment.edit.proxy.enable: true
-
+    upgrade.skip.attached.datahubs.check.enable: false
 crn:
   partition: cdp
   region: us-west-1
