CB-19146 Add TARGETING_SUBNETS_FOR_LB entitlement

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -108,6 +108,7 @@ auth:
     postgres.upgrade.skip.service.stop.enable: false
     environment.edit.proxy.enable: true
     upgrade.skip.attached.datahubs.check.enable: false
+    targeting.subnets.for.lb: true
 crn:
   partition: cdp
   region: us-west-1
