--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -24,6 +24,7 @@ auth:
       usersync.thread.timeout.enable: true
       delayedstopstart.enable: true
       recipes.enable: true
+      privileged.user.enable: true
     cloudstoragevalidation.enable:
       global: true
       aws: true
