CB-17627 Periscope should rely only on CM and YARN RM to determine cluster state  - New cached API stores dependent hostGroups for a given autoscale policyHostGroup  - CB API call is made to determine health of dependent hosts & a CM API call is made to determine CM status which is subsequently used to compute the overall periscope cluster state  - In case of undefined dependencies, periscope will fallback to checking overall CB stack availability Testing  - Unit tests for ClusterStatusSyncHandler to cover new method of inferring cluster state

--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -80,6 +80,9 @@ cb:
       write.timeout.seconds: 125
       syncCommandPoller:
         interrupt.timeout.seconds: 120
+  dependentHostGroups:
+    cache.ttl: 10
+    max.entries: 500
 
 rest:
   debug: false
