--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -70,6 +70,9 @@ sdx:
     rotatesaltpassword:
       sleeptime_sec: 10
       duration_min: 10
+    saltupdate:
+      sleeptime-sec: 10
+      duration-min: 120
   gateway:
     topology:
       name: cdp-proxy
