CB-19104 - Extend image filter to include provider specific filtering
This commit:
 - introduces a provider specific image filtering implementation
   - the filter has an actual implementation for Azure only: if
`CDP_AZURE_IMAGE_MARKETPLACE_ONLY` entitlement is granted then only
images containing valid Azure Marketplace region and image format are
permitted the others are filtered out.
   - for the other providers there is no actual filtering
   - if `CDP_AZURE_IMAGE_MARKETPLACE_ONLY` is not granted then there is
no actual filtering for Azure either
 - The filtering logic is implemented in both `core` module and
`freeipa`

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -34,6 +34,7 @@ auth:
     sshpublickey.file: key.pub
     raws3.enable: false
     azure.marketplace.images.enable: true
+    azure.marketplace.images.only.enable: false
     azure.single.resourcegroup.enable: true
     azure.single.resourcegroup.dedicated.storage.account.enable: true
     cloudidentitymappinng.enable: true
