CB-18225 import Cloudera's openssl-provider library and configure it to be the most prior java security provider for FIPS
Changes:
 - Register the com.cloudera.crypto.openssl-provider as default security provider for FIPS
 - Register the new provider manually in our services application class
 - Make stronger signer secret in mock-thunderhead to run in FIPS env

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -76,6 +76,7 @@ ext {
 
   // Cloudera
   cmClientVersion = '7.6.0'
+  clouderaCryptoOpenSslProviderVersion = '1.0.0-b8'
 
   // Testing
   assertjVersion = '3.21.0'
