CB-18225 hacks to be able to test on FIPS enabled Vagrant box with remote debug

--- a/docker-autoscale/Dockerfile
+++ b/docker-autoscale/Dockerfile
@@ -14,7 +14,8 @@ WORKDIR /
 RUN microdnf install unzip
 
 # install the periscope app
-ADD ${REPO_URL}/com/sequenceiq/periscope/$VERSION/periscope-$VERSION.jar /periscope.jar
+# ADD ${REPO_URL}/com/sequenceiq/periscope/$VERSION/periscope-$VERSION.jar /periscope.jar
+ADD ./periscope.jar /periscope.jar
 
 # add jmx exporter
 RUN curl -o /jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$PROMETHEUS_VERSION/jmx_prometheus_javaagent-$PROMETHEUS_VERSION.jar
