--- a/docker-environment/Dockerfile
+++ b/docker-environment/Dockerfile
@@ -14,7 +14,8 @@ WORKDIR /
 RUN microdnf install unzip
 
 # install the environment app
-ADD ${REPO_URL}/com/sequenceiq/environment/$VERSION/environment-$VERSION.jar /environment.jar
+# ADD ${REPO_URL}/com/sequenceiq/environment/$VERSION/environment-$VERSION.jar /environment.jar
+ADD environment.jar /environment.jar
 
 # add jmx exporter
 RUN curl -o /jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$PROMETHEUS_VERSION/jmx_prometheus_javaagent-$PROMETHEUS_VERSION.jar
