--- a/docker-datalake/Dockerfile
+++ b/docker-datalake/Dockerfile
@@ -14,7 +14,8 @@ WORKDIR /
 RUN microdnf install unzip
 
 # install the datalake app
-ADD ${REPO_URL}/com/sequenceiq/datalake/$VERSION/datalake-$VERSION.jar /datalake.jar
+# ADD ${REPO_URL}/com/sequenceiq/datalake/$VERSION/datalake-$VERSION.jar /datalake.jar
+ADD datalake.jar /datalake.jar
 
 # add jmx exporter
 RUN curl -o /jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$PROMETHEUS_VERSION/jmx_prometheus_javaagent-$PROMETHEUS_VERSION.jar
