--- a/docker-redbeams/Dockerfile
+++ b/docker-redbeams/Dockerfile
@@ -14,7 +14,8 @@ WORKDIR /
 RUN microdnf install unzip
 
 # install the Redbeams app
-ADD ${REPO_URL}/com/sequenceiq/redbeams/$VERSION/redbeams-$VERSION.jar /redbeams.jar
+# ADD ${REPO_URL}/com/sequenceiq/redbeams/$VERSION/redbeams-$VERSION.jar /redbeams.jar
+ADD redbeams.jar /redbeams.jar
 
 # add jmx exporter
 RUN curl -o /jmx_prometheus_javaagent.jar https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/$PROMETHEUS_VERSION/jmx_prometheus_javaagent-$PROMETHEUS_VERSION.jar
