--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -174,7 +174,16 @@ integrationtest:
     region: West US 2
     location: West US 2
     verticalScale:
-      supported: false
+      supported: true
+      datalake:
+        group: master
+        instanceType: Standard_D8s_v3
+      datahub:
+        group: master
+        instanceType: Standard_D8s_v3
+      freeipa:
+        group: master
+        instanceType: Standard_D8s_v3
     network:
       networkId: cloud-daily
       noPublicIp: true
@@ -237,7 +246,16 @@ integrationtest:
     region: europe-west2
     location: europe-west2
     verticalScale:
-      supported: false
+      supported: true
+      datalake:
+        group: master
+        instanceType: n1-standard-16
+      datahub:
+        group: master
+        instanceType: n1-standard-16
+      freeipa:
+        group: master
+        instanceType: n1-standard-16
     network:
       sharedProjectId:
       networkId:
