--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -117,6 +117,7 @@ dependencies {
   implementation project(":structuredevent-service-cdp")
   implementation project(':structuredevent-model')
   implementation project(':audit-connector')
+  implementation project(':wiam-connector')
   implementation project(':authorization-common')
   implementation project(':auth-distributor-connector')
   implementation project(':cloud-reactor-api')
