--- a/cloud-template/build.gradle
+++ b/cloud-template/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 
     implementation group: 'org.slf4j',                     name: 'slf4j-api',                      version: slf4jApiVersion
 
+    testImplementation group: 'org.assertj',               name: 'assertj-core',                   version: assertjVersion
     testImplementation (group: 'org.mockito',              name: 'mockito-core',                   version: mockitoVersion) {
       exclude group: 'org.hamcrest'
     }
