CB-19724 Create entitlement for DH DB SSL
* Follow-up to https://jira.cloudera.com/browse/CB-9434 / #9306.
* Add new entitlement CDP_CB_DATABASE_WIRE_ENCRYPTION_DATAHUB to
  control DH external DB SSL enforcement.
  * The presence of CDP_CB_DATABASE_WIRE_ENCRYPTION_DATAHUB in
    MockUserManagementService.getAccount() is conditional, depending on
    the app system property
    auth.mock.database.wire.encryption.datahub.enable (defaults to
    false).
* Other changes:
  * Fix various typos and code cleanups in mock-thunderhead
    (application.yml, MockUserManagementService,
    MockUserManagementServiceTest) and EntitlementServiceTest.
  * Remove ExpectedExceptionSupport, @Rule and ExpectedException from
    MockUserManagementServiceTest. Moreover, remove the now defunct
    junit-jupiter-migrationsupport artifact dependency from
    mock-thunderhead application.yml .
* Testing: Added new UT & adapted existing ones.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -37,7 +37,7 @@ auth:
     azure.marketplace.images.only.enable: false
     azure.single.resourcegroup.enable: true
     azure.single.resourcegroup.dedicated.storage.account.enable: true
-    cloudidentitymappinng.enable: true
+    cloudidentitymapping.enable: true
     microdutysdx.enable: true
     upgrade.internalrepo.enable: true
     hbase.cloudstorage.enable: false
@@ -55,6 +55,7 @@ auth:
       backup.restore.permission.checks.enabled: true
     differentdatahubversionthandatalake.enabled: true
     database.wire.encryption.enable: true
+    database.wire.encryption.datahub.enable: false
     datahub:
       runtime.upgrade.enable: true
       os.upgrade.enable: true
