--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,12 @@ org.gradle.logging.level=lifecycle
 
 # Version definitions have been moved to dependencies.gradle
 
+#added due to a JDK 11 bug with TLSv1.3, https://bugs.openjdk.org/browse/JDK-8213202
+GRADLE_OPTS="-Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2,-Djdk.tls.client.protocols=TLSv1.2"
+JAVA_TOOL_OPTIONS="-Dhttps.protocols=TLSv1.2,-Djdk.tls.client.protocols=TLSv1.2"
+
 # Repo Urls
-repoUrl=https://repo.hortonworks.com/content/repositories/releases/
+repoUrl=https://nexus-private.hortonworks.com/nexus/content/groups/public
 repoMirrorUrl=https://maven.jenkins.cloudera.com/artifactory/cloudera-mirrors/
 springRepoUrl=https://repo.spring.io/libs-release
 cdpRepoUrl=https://repository.cloudera.com/artifactory/cloudera-repos/
