CB-19850 modifying the current azure volume mapping because vms with no resource disk were filtered out.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -247,15 +247,38 @@ cb:
       enabled.instance.types: >
         Standard_D5_v2,
         Standard_D8_v3,
+        Standard_D8_v5,
         Standard_D8s_v3,
+        Standard_D8s_v5,
+        Standard_D8as_v5,
+        Standard_D8a_v4,
+        Standard_D8as_v4,
+        Standard_D13_v2,
+        Standard_D14_v2,
         Standard_D16_v3,
         Standard_D16s_v3,
+        Standard_D16_v5,
+        Standard_D16s_v5,
+        Standard_D16as_v5,
+        Standard_D16a_v4,
+        Standard_D16as_v4,
         Standard_D32_v3,
         Standard_D32s_v3,
+        Standard_D32_v5,
+        Standard_D32s_v5,
+        Standard_D32as_v5,
+        Standard_D32a_v4,
+        Standard_D32as_v4,
+        Standard_D48_v5,
+        Standard_D48s_v5,
+        Standard_D48as_v5,
         Standard_D64_v3,
         Standard_D64s_v3,
         Standard_D64a_v4,
         Standard_D64as_v4,
+        Standard_D64s_v5,
+        Standard_D64_v5,
+        Standard_D64as_v5,
         Standard_E8_v3,
         Standard_E16_v3,
         Standard_E32_v3,
@@ -273,14 +296,6 @@ cb:
         Standard_NC6s_v3,
         Standard_NC24s_v3,
         Standard_L48s_v2,
-        Standard_D13_v2,
-        Standard_D14_v2,
-        Standard_D8a_v4,
-        Standard_D16a_v4,
-        Standard_D32a_v4,
-        Standard_D8as_v4,
-        Standard_D16as_v4,
-        Standard_D32as_v4,
         Standard_E4a_v4,
         Standard_E8a_v4,
         Standard_E16a_v4,
