Revert "CB-19690 CB-19691 modify the current vertical scale engine to be able to poll resources from cloudprovider side. Also adding azure related instance scaling with CDP_CB_AZURE_VERTICAL_SCALE and added google related instance scaling with CDP_CB_GCP_VERTICAL_SCALE. All of them is entitled for mock-thunderhead modul. Also added the relevant e2e tests for azure and google."
This reverts commit b63e64c3ed51fa2963b08d0cea5523479fa9b8b3.

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -41,7 +41,7 @@ cdp.structuredevent:
   rest:
     contentlogging: true
 freeipa:
-  verticalScalingSupported: AWS,GCP,MOCK,AZURE
+  verticalScalingSupported: AWS,MOCK
   cert.dir: /certs/
   client:
     id: freeipa
