CB-19857 Refactor dependencies from gradle.properties into gradle.dependencies just to make sure that we are following a standard way, and dependabot can process the versions.

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ import groovy.json.JsonSlurper
 import org.ajoberstar.grgit.Grgit
 
 buildscript {
+  apply from: 'dependencies.gradle'
+
   repositories {
     maven { url = "$repoMirrorUrl" }
     maven { url = "$repoUrl" }
