CB-19983 Introduce E2E Azure Resource Group Name and Usage as defaults for Test Application Config
Azure E2E resource group usage has been changed from `MULTIPLE` to `SINGLE_WITH_DEDICATED_STORAGE_ACCOUNT` with `cb-e2e-westus2-tmp` dedicated resource group. Beyond these `createResourceGroup` init method got some improvements and fixes.

--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -212,8 +212,8 @@ integrationtest:
         loggerIdentity:
       secure: false
     resourcegroup:
-      usage: MULTIPLE
-      name:
+      usage: SINGLE_WITH_DEDICATED_STORAGE_ACCOUNT
+      name: cb-e2e-westus2-tmp
     marketplace:
       freeipa:
         image:
