CB-19939 in the newer version of podam then changed the xml library from [xml-apis » xml-apis] to [javax.xml.bind » jaxb-api] Retring the removal of [com.sun.xml.ws]
See:
https://mvnrepository.com/artifact/uk.co.jemos.podam/podam/7.2.0.RELEASE

https://mvnrepository.com/artifact/uk.co.jemos.podam/podam/7.2.11.RELEASE

--- a/authorization-common/build.gradle
+++ b/authorization-common/build.gradle
@@ -38,7 +38,8 @@ dependencies {
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
   testImplementation group: 'org.awaitility',            name: 'awaitility',                     version: awaitilityVersion
 
-  implementation(group: 'uk.co.jemos.podam',             name: 'podam',                           version: '7.1.0.RELEASE') {
+  //this needs to stay as implementation as other module include EnforceAuthorizationTestUtil
+  implementation(group: 'uk.co.jemos.podam',             name: 'podam',                           version: '7.2.11.RELEASE') {
     exclude group: 'javax.annotation',                   module: 'jsr250-api'
   }
   implementation     group: 'org.springframework.boot',  name: 'spring-boot-starter',             version: springBootVersion
