CB-19671 refactor the current cert logic and make it more maintainable.

--- a/build.gradle
+++ b/build.gradle
@@ -170,7 +170,12 @@ subprojects {
                         '**/cloudbreak/domain/**',
                         '**/environment/**/domain/**',
                         '**/environment/**/attributes/**',
-                        '**Config**.java'
+                        '**Config**.java',
+                        '**Entry**.java',
+                        '*.json',
+                        '*.yaml',
+                        '*.yml',
+                        '*.ftl'
                 ]
         )
       })
