CB-19614 adding database cert rotation when the cluster starts. This will always update the certificate on the clusters where we have external database. Also requires a cm restart which is a conditional option to make sure we dont do it every case.

--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,10 @@ subprojects {
     toolVersion = "4.7.3"
     excludeFilter = file("$rootProject.projectDir/config/spotbugs/excludeFilter.xml")
     effort = "min"
+    ignoreFailures = false
+    showProgress = true
+    onlyAnalyze = [ 'com.sequenceiq.cloudbreak.*' ]
+    maxHeapSize = '2g'
   }
 
   jacoco {
