CB-18161 Parcel Availability Checker should retry failed requests During upgrade, We have seen cases where Parcel availability check fails but later it is successful. To reduce the failures, we are adding retry policy to check parcel availability.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -673,6 +673,8 @@ cb:
     port: 9443
   knox:
     port: 8443
+  http:
+    retryableStatusCodes: 403,408,425,429,502,503,504,509
   https:
     port: 443
   ssh:
@@ -824,6 +826,13 @@ cb:
         roles:
           - role: GATEWAY
             required: false
+  parcel:
+    retry:
+      maxAttempts: 5
+      backOffDelay: 2000
+      backOffMultiplier: 2
+
+
 
 cluster:
   monitoring:
