CB-19868 Retain flow information for atleast 24 hours after completion  - Added a configurable endTimeDuration to flow cleanup configs  - Propagate this param to the service layer and compute the endTimeUpperBound epoch ms  - Purge flow logs below computed upper bound
Testing
 - Repository test for FlowLogRepository to verify correct behaviour

--- a/flow/build.gradle
+++ b/flow/build.gradle
@@ -43,6 +43,7 @@ dependencies {
   testImplementation group: 'org.springframework.security',      name: 'spring-security-web',            version: springSecurityVersion
   testImplementation group: 'org.springframework.boot',          name: 'spring-boot-starter-test',       version: springBootVersion
   testImplementation group: 'org.awaitility',                    name: 'awaitility',                     version: awaitilityVersion
+  testImplementation group: 'com.h2database',                    name: 'h2',                             version: h2databaseVersion
   testImplementation group: 'org.testcontainers',                name: 'postgresql',                     version: testContainersVersion
   testImplementation group: 'org.testcontainers',                name: 'junit-jupiter',                  version: testContainersVersion
   testImplementation project(path: ':authorization-common', configuration: 'tests')
