CB-19650 Purge stale Scaling Activities from periscope  - New monitor introduced to run every 10 mins for a collection of scalingActivityIds  - ScalingActivities with desired statuses older than 24 hours (configurable) will be cleaned up from the DB
Testing
 - Additional UT for repository call that fetches monitoredData
 - UT coverage added for new ScalingActivityExecutor

--- a/autoscale/src/main/resources/application.yml
+++ b/autoscale/src/main/resources/application.yml
@@ -62,6 +62,10 @@ periscope:
       enabled: true
     delete-monitor:
       enabled: true
+    cleanup-monitor:
+      enabled: true
+  scaling-activity:
+    cleanup-event-age.hours: 24
 
 cb:
   server:
