CB-20258 NoSuchElementException in VerticalScaleInstanceProvider
* VerticalScaleInstanceProvider.listInstanceTypes():
  * Handle edge cases.
  * Add additional logs.
  * Minor code-cleanup / refactoring for a more expressive logic.
* Testing: Added new UT & adapted existing ones.

--- a/environment-common/build.gradle
+++ b/environment-common/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     testImplementation project(":common-model")
     testImplementation project(":auth-connector")
 
-    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: hamcrestVersion
+    testImplementation group: "org.assertj",                   name: "assertj-core",                   version: assertjVersion
+    testImplementation group: "org.hamcrest",                  name: "hamcrest",                       version: hamcrestVersion
 }
