--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -108,6 +108,7 @@ auth:
     environment.edit.proxy.enable: true
     upgrade.skip.attached.datahubs.check.enable: false
     targeting.subnets.for.endpoint.access.gateway.enable: true
+    cost.calculation.enable: false
 crn:
   partition: cdp
   region: us-west-1
