--- a/auth-connector/build.gradle
+++ b/auth-connector/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     exclude group: 'org.mockito'
     exclude group: 'junit', module: 'junit'
   }
-  testImplementation group: 'org.mockito',              name: 'mockito-core',                   version: mockitoVersion
+  testImplementation group: 'org.mockito',              name: 'mockito-inline',                 version: mockitoVersion
   testImplementation group: 'org.assertj',              name: 'assertj-core',                   version: assertjVersion
   testImplementation group: 'org.hamcrest',             name: 'hamcrest',                       version: hamcrestVersion
   testImplementation project(path: ':common', configuration: 'tests')
